--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html lang="en">
 <head>
-    <link rel="canonical" href="https://techcorp.tech" />
+    <link rel="canonical" href="https://techcorp.live" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
     <!-- Social media share -->
     <meta property="og:title" content="techcorp - Tailwind CSS Landing Page">
     <meta property="og:site_name" content="techcorp">
-    <meta property="og:url" content="https://techcorp.tech">
+    <meta property="og:url" content="https://techcorp.live">
     <meta property="og:type" content="">
     <meta property="og:image" content="">
     <meta name="twitter:card" content="summary" />
@@ -58,7 +58,7 @@
                 <div class="items-center justify-between hidden w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
                     <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
                         <li>
-                            <a href="https://jobs.techcorp.tech" class="block py-2 pl-3 pr-4 text-white bg-purple-700 rounded lg:bg-transparent lg:text-purple-700 lg:p-0 dark:text-white" aria-current="page">Home</a>
+                            <a href="https://jobs.techcorp.live" class="block py-2 pl-3 pr-4 text-white bg-purple-700 rounded lg:bg-transparent lg:text-purple-700 lg:p-0 dark:text-white" aria-current="page">Home</a>
                         </li>
                         <li>
                             <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Careers</a>
@@ -67,10 +67,10 @@
                             <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Marketplace</a>
                         </li>
                         <li>
-                            <a href="https://customer.techcorp.tech" class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Customers</a>
+                            <a href="https://customer.techcorp.live" class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Customers</a>
                         </li>
                         <li>
-                            <a href="https://blog.techcorp.tech" class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Blogs</a>
+                            <a href="https://blog.techcorp.live" class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Blogs</a>
                         </li>
                         <li>
                             <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-purple-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
@@ -387,13 +387,13 @@
                     <h3 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Company</h3>
                     <ul class="text-gray-500 dark:text-gray-400">
                         <li class="mb-4">
-                            <a href="https://blog.techcorp.tech" class=" hover:underline">Blog</a>
+                            <a href="https://blog.techcorp.live" class=" hover:underline">Blog</a>
                         </li>
                         <li class="mb-4">
-                            <a href="https://jobs.techcorp.tech" class="hover:underline">Careers</a>
+                            <a href="https://jobs.techcorp.live" class="hover:underline">Careers</a>
                         </li>
                         <li class="mb-4">
-                            <a href="https://customer.techcorp.tech" class="hover:underline">Customers</a>
+                            <a href="https://customer.techcorp.live" class="hover:underline">Customers</a>
                         </li>
                     </ul>
                 </div>
@@ -429,10 +429,10 @@
                             <a href="#" class=" hover:underline">About</a>
                         </li>
                         <li class="mb-4">
-                            <a href="https://jobs.techcorp.tech" class="hover:underline">Careers</a>
+                            <a href="https://jobs.techcorp.live" class="hover:underline">Careers</a>
                         </li>
                         <li class="mb-4">
-                            <a href="https://blog.techcorp.tech" class="hover:underline">Blog</a>
+                            <a href="https://blog.techcorp.live" class="hover:underline">Blog</a>
                         </li>
                     </ul>
                 </div>
