--- a/index.html
+++ b/index.html
@@ -387,13 +387,13 @@
                     <h3 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Company</h3>
                     <ul class="text-gray-500 dark:text-gray-400">
                         <li class="mb-4">
-                            <a href="https://blog.techcorp.live" class=" hover:underline">Blog</a>
+                            <a href="#" class=" hover:underline">Blog</a>
                         </li>
                         <li class="mb-4">
-                            <a href="https://jobs.techcorp.live" class="hover:underline">Careers</a>
+                            <a href="#" class="hover:underline">Careers</a>
                         </li>
                         <li class="mb-4">
-                            <a href="https://customer.techcorp.live" class="hover:underline">Customers</a>
+                            <a href="#" class="hover:underline">Customers</a>
                         </li>
                     </ul>
                 </div>
@@ -401,7 +401,7 @@
                     <h3 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Help center</h3>
                     <ul class="text-gray-500 dark:text-gray-400">
                         <li class="mb-4">
-                            <a href="https://discord.gg/6mEXwHEX" class="hover:underline">Discord Server</a>
+                            <a href="#" class="hover:underline">Discord Server</a>
                         </li>
                         <li class="mb-4">
                             <a href="mailto:info@techcorp.com" class="hover:underline">Contact Us</a>
@@ -440,10 +440,10 @@
                     <h3 class="mb-6 text-sm font-semibold text-gray-900 uppercase dark:text-white">Download</h3>
                     <ul class="text-gray-500 dark:text-gray-400">
                         <li class="mb-4">
-                            <a href="https://github.com/techcorp/techcorp/raw/main/files/techcorp.apk" class="hover:underline">Android</a>
+                            <a href="https://github.com/tech-corp-live/tech_corp_mob_app/raw/main/Techcorp-mobapp.apk" class="hover:underline">Android</a>
                         </li>
                         <li class="mb-4">
-                          <a href="https://github.com/techcorp/techcorp/raw/main/files/windows.zip" class="hover:underline">Windows</a>
+                          <a href="#" class="hover:underline">Windows</a>
                       </li>
                     </ul>
                 </div>
